[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "u2p_2d"
version = "0.1.0"
description = "Pressure estimation from 2-dimensional velocity fields"
authors = [
    { name="Manuel Aguiar Ferreira", email="m.aguiar-ferreira@soton.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]